--- a/public/Components/PostComponent/PostComponent.css
+++ b/public/Components/PostComponent/PostComponent.css
@@ -16,10 +16,9 @@
 }
 
 .post-text-content {
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 130%;
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-l);
+    line-height: var(--line-height-m);
     color: var(--text-primary);
     margin: 0;
 
@@ -39,10 +38,10 @@
 
 .post-read-more {
     cursor: pointer;
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 130%;
+
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-l);
+    line-height: var(--line-height-m);
     color: var(--text-secondary);
 }
 
@@ -183,8 +182,7 @@
 }
 
 .post-action-counter {
-    font-family: var(--font-family);
-    font-weight: 500;
+    font-weight: var(--font-weight-bold);
     font-size: 16px;
     line-height: 100%;
     color: var(--text-secondary);
@@ -247,8 +245,8 @@
     border-radius: 100px;
     padding: 4px 8px;
     background: var(--background-black-transparent);
-    font-family: var(--font-family);
-    font-weight: 500;
+
+    font-weight: var(--font-weight-bold);
     font-size: 12px;
     color: var(--text-white);
 }
