--- a/public/Components/AvatarComponent/AvatarComponent.css
+++ b/public/Components/AvatarComponent/AvatarComponent.css
@@ -52,6 +52,51 @@
     height: 150px;
 }
 
+.profile-avatar {
+    border-radius: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+    border: 4px solid var(--stroke-white);
+}
+
+.profile-avatar.edit {
+    align-items: center;
+    justify-content: center;
+    bottom: -44px;
+    overflow: hidden;
+}
+
+.darken {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    cursor: pointer;
+    background: none;
+    transition: var(--trans-menu);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.darken:hover {
+    background: var(--background-black-transparent);
+}
+
+.darken:active {
+    opacity: 0.8;
+}
+
+.avatar-edit-icon {
+    margin-bottom: 4px;
+    opacity: 0.9;
+    box-shadow: 0 2px 8px 0 var(--button-transparent-active);
+}
+
+.darken:hover .avatar-edit-icon {
+    opacity: 1;
+}
+
 .avatar-status-online {
     position: absolute;
     bottom: 8px;
@@ -74,9 +119,9 @@
     border: 4px solid var(--stroke-white);
     border-radius: 1000px;
     padding: 2px 8px;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 130%;
+
+    font-weight: var(--font-weight-bold);
+    font-size: var(--font-size-xs);
+    line-height: var(--line-height-m);
     color: var(--text-secondary);
 }
