--- a/public/Components/HeaderComponent/HeaderComponent.css
+++ b/public/Components/HeaderComponent/HeaderComponent.css
@@ -56,7 +56,7 @@ a {
     background: transparent;
     width: 220px;
     height: 32px;
-    font-size: 14px;
+    font-size: var(--font-size-s);
     padding-left: 8px;
 
     flex-grow: 1;
