--- a/public/Components/UI/ModalWindowComponent/ModalWindowComponent.css
+++ b/public/Components/UI/ModalWindowComponent/ModalWindowComponent.css
@@ -58,18 +58,10 @@
 }
 
 .modal-window-title {
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 130%;
+    font-weight: var(--font-weight-bold);
+    font-size: var(--font-size-l);
+    line-height: var(--line-height-m);
     color: var(--text-primary);
-}
-
-.modal-window-textarea {
-    width: 100%;
-    height: 145px;
-    min-height: 160px;
-    resize: none;
 }
 
 .modal-window-items-default {
@@ -78,7 +70,7 @@
     gap: 12px;
 }
 
-.modal-window-divider {
+.divider {
     height: 1px;
     border-radius: 100px;
     background: var(--stroke-primary);
@@ -90,6 +82,10 @@
     flex-direction: column;
     gap: 16px;
     width: 100%;
+}
+
+.modal-window-count {
+    font-size: var(--font-size-l);
 }
 
 .modal-window-items-counted {
