--- a/public/Components/UI/RadioComponent/RadioComponent.css
+++ b/public/Components/UI/RadioComponent/RadioComponent.css
@@ -9,10 +9,10 @@
 .radio-wrapper {
     display: flex;
     gap: 8px;
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 130%;
+
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-s);
+    line-height: var(--line-height-m);
     color: var(--text-secondary);
     flex-direction: column;
 }
