--- a/public/Components/UI/TextareaComponent/TextareaComponent.css
+++ b/public/Components/UI/TextareaComponent/TextareaComponent.css
@@ -1,8 +1,19 @@
+.textarea-wrapper {
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-s);
+    line-height: var(--line-height-m);
+    color: var(--text-secondary);
+}
+
 textarea {
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 130%;
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-s);
+    line-height: var(--line-height-m);
     color: var(--text-primary);
     margin-bottom: 8px;
     border: 1px solid var(--stroke-primary);
@@ -10,6 +21,11 @@ textarea {
     padding: 8px 12px;
     background: var(--background-light-gray);
     transition: var(--trans-input);
+
+    width: 100%;
+    height: 145px;
+    min-height: 160px;
+    resize: none;
 }
 
 textarea:hover {
@@ -22,9 +38,5 @@ textarea:focus {
 }
 
 textarea::placeholder {
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 130%;
     color: var(--text-secondary);
 }
