--- a/public/Views/FeedView/FeedView.css
+++ b/public/Views/FeedView/FeedView.css
@@ -16,10 +16,10 @@
     width: 100%;
     height: 36px;
     transition: var(--trans-menu);
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 130%;
+
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-s);
+    line-height: var(--line-height-m);
     color: var(--text-primary);
     display: flex;
     flex-direction: row;
@@ -41,10 +41,10 @@
     border-radius: 12px;
     width: 553px;
     height: 40px;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 130%;
+
+    font-weight: var(--font-weight-bold);
+    font-size: var(--font-size-l);
+    line-height: var(--line-height-m);
     color: var(--text-accent);
     display: flex;
     flex-direction: row;
