--- a/public/Components/UI/ModalWindowComponent/ModalWindowComponent.css
+++ b/public/Components/UI/ModalWindowComponent/ModalWindowComponent.css
@@ -99,3 +99,25 @@
     display: flex;
     flex-direction: column;
 }
+
+.modal-window-pics-wrapper {
+    width: 100%;
+    height: 96px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+}
+
+.modal-window-pic-wrapper {
+    height: 100%;
+    aspect-ratio: 1 / 1;
+}
+
+.modal-window-pic {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid var(--stroke-primary);
+}
