--- a/public/Components/AvatarComponent/AvatarComponent.css
+++ b/public/Components/AvatarComponent/AvatarComponent.css
@@ -15,41 +15,65 @@
 .avatar-wrapper.xxs {
     width: 28px;
     height: 28px;
+
+    min-width: 28px;
+    min-height: 28px;
 }
 
 .avatar-wrapper.xs {
     width: 32px;
     height: 32px;
+
+    min-width: 32px;
+    min-height: 32px;
 }
 
 .avatar-wrapper.s {
     width: 40px;
     height: 40px;
+
+    min-width: 40px;
+    min-height: 40px;
 }
 
 .avatar-wrapper.m {
     width: 48px;
     height: 48px;
+
+    min-width: 48px;
+    min-height: 48px;
 }
 
 .avatar-wrapper.l {
     width: 56px;
     height: 56px;
+
+    min-width: 56px;
+    min-height: 56px;
 }
 
 .avatar-wrapper.xl {
     width: 64px;
     height: 64px;
+
+    min-width: 64px;
+    min-height: 64px;
 }
 
 .avatar-wrapper.xxl {
     width: 80px;
     height: 80px;
+
+    min-width: 80px;
+    min-height: 80px;
 }
 
 .avatar-wrapper.xxxl {
     width: 150px;
     height: 150px;
+
+    min-width: 150px;
+    min-height: 150px;
 }
 
 .profile-avatar {
