--- a/public/Components/MessengerComponent/ChatWindowComponent.css
+++ b/public/Components/MessengerComponent/ChatWindowComponent.css
@@ -129,6 +129,10 @@ textarea.msg-textarea {
     max-height: 240px;
 }
 
+.msg-textarea::placeholder {
+    color: var(--text-secondary);
+}
+
 .msg-add-media {
     background: url(../../static/img/primary-add-icon.svg) no-repeat;
     height: 36px;
