--- a/public/Views/ProfileView/ProfileView.css
+++ b/public/Views/ProfileView/ProfileView.css
@@ -55,6 +55,14 @@
     color: var(--text-primary);
 }
 
+.profile-avatar {
+    border-radius: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+    border: 4px solid var(--stroke-white);
+}
+
 .profile-info-full {
     display: flex;
     flex-direction: row;
